feat: SEO - Meta tags - Description and keywords

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../src/assets/images/dmmLogo.webp" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../src/assets/images/dmmLogo.webp"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DDM - Distribuição e Manutenção Industrial</title>
+    <meta
+      name="description"
+      content="Qualidade e inovação na distribuição de peças, manutenção industrial, descartáveis e produtos alimentícios. Consulte já nossos serviços!"
+    />
+    <meta
+      name="keywords"
+      content="distribuição de peças, produtos industriais, descartáveis, alimentos, manutenção industrial, manutenção de máquinas, empresa de manutenção, peças industriais, equipamentos, polias, correias, DDM"
+    />
   </head>
   <body>
     <div id="root"></div>
