update: SEO - Meta tags - Description and keywords

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>DDM - Distribuição e Manutenção Industrial</title>
     <meta
       name="description"
-      content="Qualidade e inovação na distribuição de peças, manutenção industrial, descartáveis e produtos alimentícios. Consulte já nossos serviços!"
+      content="Qualidade e inovação na distribuição de peças e manutenção industrial. Consulte já nossos serviços!"
     />
     <meta
       name="keywords"
-      content="distribuição de peças, produtos industriais, descartáveis, alimentos, manutenção industrial, manutenção de máquinas, empresa de manutenção, peças industriais, equipamentos, polias, correias, DDM"
+      content="distribuição de peças, produtos industriais, manutenção industrial, manutenção de máquinas, empresa de manutenção, peças industriais, equipamentos, polias, correias, DDM"
     />
   </head>
   <body>
