fix: Favicon type and href

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="../src/assets/images/dmmLogo.webp"
+      type="image/webp"
+      href="./src/assets/images/dmmLogo.webp"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DDM - Distribuição e Manutenção Industrial</title>
