update: Correct company name to DMM

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       href="./src/assets/images/dmmLogo.webp"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DDM - Distribuição e Manutenção Industrial</title>
+    <title>DMM - Distribuição e Manutenção Industrial</title>
     <meta
       name="description"
       content="Qualidade e inovação na distribuição de peças e manutenção industrial. Consulte já nossos serviços!"
     />
     <meta
       name="keywords"
-      content="distribuição de peças, produtos industriais, manutenção industrial, manutenção de máquinas, empresa de manutenção, peças industriais, equipamentos, polias, correias, DDM"
+      content="distribuição de peças, produtos industriais, manutenção industrial, manutenção de máquinas, empresa de manutenção, peças industriais, equipamentos, polias, correias, DMM"
     />
   </head>
   <body>
